syntax = "proto3";

package xuumin;

import "google/api/annotations.proto";

service DiagramService {
    rpc AddDiagram(AddDiagramRequest) returns (AddDiagramReply) {
        option (google.api.http) = {
            post: "/v1/diagrams"
            body: "*"
        };
    }
    rpc GetDiagram(GetDiagramRequest) returns (GetDiagramReply) {
        option (google.api.http) = {
            get: "/v1/diagrams/{uuid}"
        };
    }
}

message AddDiagramRequest {
    string source = 1;
}

message AddDiagramReply {
    string uuid = 1;
    string source = 2;
}

message GetDiagramRequest {
    string uuid = 1;
}

message GetDiagramReply {
    string uuid = 1;
    string source = 2;
}
